--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+#name {
+  margin: 47px 0px 0px 0px;
+  font-size: 60px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#title {
+  margin: 0px 0px 3px 10px;
+  font-size: 45px;
+}
+#headshot {
+  width: 325px;
+  height: auto;
+}
+#brand {
+  width: 550px;
+  align-self: center;
+}
+#brandstatement {
+  margin: 10px 0px 20px 0px;
+}
+.icon {
+  width: 50px;
+  height: auto;
+}
+#icons {
+  display: flex;
+  width: 325px;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+.downarrow {
+  margin-top: 80px;
+  width: 40px;
+  height: auto;
 }
