--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,11 @@
   margin-top: 15px;
 }
 .downarrow {
-  margin-top: 80px;
+  margin: 80px 0px 60px 0px;
   width: 40px;
   height: auto;
+}
+#test {
+  border: solid black;
+  height: 3000px;
 }
