--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+h3, h1 {
+  margin: 0px;
+}
+body {
+  color: #444444;
+}
+
 /* App */
 .App {
   align-items: center;
@@ -43,17 +50,16 @@
 
 /* Resume */
 .edulogo {
-  width: 70px;
-  height: 75px;
-  margin-left: 20px;
+  height: 65px;
 }
-.galogo {
+.galogo, .edulogo {
   width: 60px;
-  margin-left: 20px;
+  margin: 0px 20px 0px 20px;
 }
 .schoollogo {
   display: flex;
   flex-direction: row;
+  margin: 30px 20px 0px 0px;
 }
 #resumecontainer {
   display: flex;
@@ -61,16 +67,47 @@
   margin-bottom: 200px;
 }
 #resumedownload {
-  width: 350px;
-  border: solid black;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-#educontainer {
-  border: solid black;
-}
 #resumebtn {
   font-size: 35px;
   padding: 15px;
+  width: 200px;
+  margin: 0px 20px 0px 30px;
+  border-radius: 12px;
 }
+.locationyear {
+  display: flex;
+  flex-direction: row;
+}
+.eduyear {
+  margin-left: auto;
+  font-size: 20px;
+}
+.locationyear, .degreegpa {
+  margin-left: 20px;
+}
+.degree, .gpa {
+  font-size: 25px;
+  margin-top: 15px;
+}
+.edulocation {
+  font-size: 15px;
+  margin-top: 6px;
+}
+.gabio {
+  margin-bottom: 30px;
+}
+.edu {
+  margin: 10px 30px 0px 30px;
+}
+
+.pagetitlediv {
+  margin: 30px 0px 20px 30px;
+}
+.pagetitle {
+  font-size: 50px;
+}
+
