--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,6 @@ body {
 #resumecontainer {
   display: flex;
   flex-direction: row;
-  margin-bottom: 200px;
 }
 #resumedownload {
   display: flex;
@@ -109,5 +108,32 @@ body {
 }
 .pagetitle {
   font-size: 50px;
+}
+.arrowcontainer {
+  display: flex;
+  justify-content: center;
+}
+
+/* Projects */
+.projectscontainer {
+  margin: 20px 30px 300px 30px;
+}
+.allprojects {
+  display: flex;
+  flex-direction: row;
+  margin: 15px 0px 0px 0px;
+  justify-content: center;
+}
+.projectimg {
+  width: 450px;
+  height: 383px;
+}
+.projecttitle {
+  display: flex;
+  justify-content: center;
+  font-size: 35px;
+}
+.weatherdiv {
+  margin-left: 75px;
 }
 
