--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
-h3, h1 {
+h3, h1, h2 {
   margin: 0px;
 }
 body {
-  color: #444444;
-  background-image: url('../public/images/portback.jpeg');
+  /* color: #444444; */
+  /* background-image: url('../public/images/portback.jpeg'); */
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-color: #AEC6CF;
 }
 a {
   text-decoration: none;
@@ -17,28 +18,21 @@ a {
 .App {
   align-items: center;
   justify-content: center;
-  text-align: center;
   display: flex;
   flex-direction: column;
+  margin: 150px 30px 0px 30px;
 }
 #name {
-  margin: 47px 0px 0px 0px;
   font-size: 60px;
 }
 #title {
-  margin: 0px 0px 3px 10px;
   font-size: 45px;
 }
 #headshot {
   width: 325px;
   height: auto;
-}
-#brand {
-  width: 550px;
-  align-self: center;
-}
-#brandstatement {
-  margin: 10px 0px 20px 0px;
+  border-radius: 12px;
+  border: 20px solid whitesmoke;
 }
 .icon {
   width: 50px;
@@ -46,14 +40,22 @@ a {
 }
 #icons {
   display: flex;
-  width: 325px;
+  flex-direction: column;
   justify-content: space-between;
-  margin-top: 15px;
+  margin: 0px 20px 0px 10px;
+}
+#homecontainer {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 40px;
 }
 .downarrow {
   margin: 80px 0px 60px 0px;
   width: 40px;
   height: auto;
+}
+#titlediv {
+  margin-left: 30px;
 }
 
 /* Resume */
