--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ h3, h1, h2 {
 }
 body {
   /* color: #444444; */
-  /* background-image: url('../public/images/portback.jpeg'); */
+  background-image: url('../public/images/portback.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -31,22 +31,26 @@ a {
 #headshot {
   width: 325px;
   height: auto;
-  border-radius: 12px;
-  border: 20px solid whitesmoke;
+  margin: 0px 30px 0px 30px;
+}
+#headshotdiv {
+  display: flex;
+  align-items: center;
 }
 .icon {
-  width: 50px;
+  width: 40px;
   height: auto;
+  margin: 0px 10px 0px 0px;
 }
 #icons {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 0px 20px 0px 10px;
+  flex-direction: row;
+  margin: 0px 20px 0px 0px;
 }
 #homecontainer {
   display: flex;
   flex-direction: row;
+  align-self: center;
   margin-bottom: 40px;
 }
 .downarrow {
@@ -56,6 +60,9 @@ a {
 }
 #titlediv {
   margin-left: 30px;
+}
+#brandstatement {
+  margin: 30px 45px 20px 0px;
 }
 
 /* Resume */
@@ -112,6 +119,13 @@ a {
 .edu {
   margin: 10px 30px 0px 30px;
 }
+#arrowresume {
+  margin: 60px 0px 40px 0px;
+}
+#resumepage {
+  margin-left: 30px;
+  margin-right: 30px;
+}
 
 .pagetitlediv {
   margin: 30px 0px 20px 30px;
@@ -126,12 +140,12 @@ a {
 
 /* Projects */
 .projectscontainer {
-  margin: 20px 30px 300px 30px;
+  margin: 20px 60px 300px 60px;
 }
 .allprojects {
   display: flex;
   flex-direction: row;
-  margin: 15px 0px 0px 0px;
+  margin: 35px 0px 0px 0px;
   justify-content: center;
 }
 .projectimg {
@@ -156,9 +170,16 @@ a {
 }
 .projectlink {
   width: 70px;
-  margin-bottom: 35px;
+  margin: 35px 0px 40px 0px;
   border-radius: 8px;
   font-size: 18px;
   padding: 3px;
 }
 
+
+/* media queries */
+@media screen and (min-width: 1070px) {
+  #titlediv {
+    width: 600px;
+  }
+}
