--- a/src/App.css
+++ b/src/App.css
@@ -3,15 +3,14 @@ h3, h1, h2 {
 }
 body {
   /* color: #444444; */
-  background-image: url('../public/images/portback.jpeg');
+  /* background-image: url('../public/images/back.jpg'); */
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-color: #AEC6CF;
 }
 a {
   text-decoration: none;
-  color: #444444;
+  /* color: #444444; */
 }
 
 /* App */
