--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,28 @@ a {
   color: #C0C0C0;
 }
 
+/* Nav */
+.navcontainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 400px;
+
+  margin: 10px 0px 0px 60px;
+}
+.navelement {
+  /* margin-right: 20px; */
+  font-size: 20px;
+}
+
+
 /* App */
 .App {
   align-items: center;
   justify-content: center;
   display: flex;
   flex-direction: column;
-  margin: 175px 30px 0px 30px;
+  margin: 100px 30px 0px 30px;
 }
 #name {
   font-size: 60px;
@@ -173,7 +188,7 @@ a {
 .allprojects {
   display: flex;
   flex-direction: row;
-  margin: 50px 0px 0px 0px;
+  margin: 40px 0px 0px 0px;
   justify-content: center;
 }
 .projectimg {
@@ -222,6 +237,9 @@ a {
 }
 .details {
   cursor: default;
+}
+.details:hover {
+  text-decoration: underline;
 }
 .detailsdiv {
   text-align: center;
